[package]
name = "leet-code"
version = "0.1.0"
edition = "2024"

[lib]
name = "leet_code"
path = "src/lib.rs"

[dependencies]
itertools = "0.14.0"
paste = "1.0.15"

[dev-dependencies]
spectral = "0.6.0" # Fluent assertions.
criterion = "0.8.2"

[[bench]]
name = "concatenation_of_array"
harness = false

[[bench]]
name = "shuffle_the_array"
harness = false

[[bench]]
name = "valid_palindrome"
harness = false

[[bench]]
name = "set_mismatch"
harness = false

[[bench]]
name = "ransom_note"
harness = false

[[bench]]
name = "find_all_numbers_disappeared_in_an_array"
harness = false

[[bench]]
name = "monotonic_stack"
harness = false

[[bench]]
name = "remove-duplicates-from-sorted-array-ii"
harness = false

[[bench]]
name = "contains-duplicate-ii"
harness = false
